hphp/hack/test/typecheck/namespace/namespace_aliasing1.php.exp
File "namespace_aliasing1.php", line 12, characters 16-24:
Unbound name: Dict\foo (a global function) (Naming[2049])
